tests/derive/union.stderr
error: derive(Query) may only be applied to structs and enums
 --> $DIR/union.rs:4:7
  |
4 | union Foo {
  |       ^^^

error: derive(Bundle) does not support enums or unions
 --> $DIR/union.rs:9:7
  |
9 | union Bar {
  |       ^^^
